# blog_website

./: .env  Procfile  README.md  main.py  pyproject.toml  requirements.txt  requirments.txt  wsgi.py
flask_blog/: __init__.py  app.py  config.py  main.py
flask_blog/forms/: __init__.py  comment_form.py  delete_account_form.py  edit_profile_form.py  login_form.py  post_form.py  register_form.py
flask_blog/models/: comment.py  post.py  user.py
flask_blog/routes/: auth.py  blog.py
flask_blog/static/css/: styles.css
flask_blog/static/js/: main.js
flask_blog/templates/: base.html  dashboard.html  edit_post.html  edit_profile.html  error.html  index.html  login.html  new_post.html  post.html  profile.html  register.html
instance/: blog.db
